# Basic_Cmake_CPP

./: .clang-format  CMakeLists.txt
app_name/: CMakeLists.txt
app_name/include/: CMakeLists.txt
app_name/src/: CMakeLists.txt  main.cpp
